made a few visual adjustments to the default CSS: a basic mobile first (form elements pending) design, which I only tested once on iPhone. also fixed a few display glitches for very long headlines and descriptions. highlighted the active tag on tag search results.

--- a/style.css
+++ b/style.css
@@ -6,12 +6,17 @@
 }
 
 html {
-	font: 100%/1.3 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font: 125%/1.3 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	width: 100%;
+}
+
+body {
+	width: 100%;
 }
 
 #container {
-	width: 75%;
-	margin: 5em auto;
+	width: 92%;
+	margin: 1em auto;
 }
 
 #add {
@@ -43,6 +48,10 @@ html {
 	margin-bottom: 0.4em;
 }
 
+#search select {
+	margin-bottom: 0.4em;
+}
+
 #add-toggle {
 
 	color: #000;
@@ -51,6 +60,7 @@ html {
 #entries dt a {
 	color: #007aff;
 	font-weight: bold;
+	word-wrap: break-word;
 }
 
 #entries dd {
@@ -61,9 +71,18 @@ html {
 	color: #888;
 }
 
+#entries dd .desc {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
 #entries dd .url {
 	color: #4cd964;
-	word-wrap: break-word;
+	/* word-wrap: break-word; */
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 #entries dd .tags {
@@ -76,17 +95,39 @@ html {
 
 #entries dd .tags a {
 	display: inline-block;
-	margin-right: 0.6em;
+	margin-right: 0.3em;
+	margin-bottom: 0.2em;
 	font-size: 0.85em;
-	color: #fff;
-	background: #bbb;
+	color: #aaa;
+	background: #e6e6e6;
 	text-decoration: none;
 	border: 0px solid #000;
 	border-radius: 1.1em;
 	padding: 0.1em 0.6em 0.15em;
 }
 
+#entries dd .tags a.active {
+	background: #d4d4d4;
+	color: #fff;
+}
+
 #entries dd .tags a:focus,
 #entries dd .tags a:hover {
 	background: #007aff;
+	color: #fff;
+}
+
+@media only screen and (min-width: 641px) {
+	html {
+		font-size: 100%;
+	}
+
+	#container {
+		width: 75%;
+		margin: 5em auto;
+	}
+
+	#entries dd .tags a {
+		margin-right: 0.6em;
+	}
 }
